# nano-hevc

./: .gitignore  README.md  pyproject.toml
docs/: frames_and_panes.md
nano_hevc/: __init__.py  __main__.py  block.py  frame.py  intra.py  metrics.py  quant.py  transform.py
tests/: __init__.py  test_intra_angular.py  test_intra_dc.py  test_intra_planar.py  test_quant.py  test_transform.py
